docker file removed

--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
-DB_HOST=localhost
-DB_USER=vivek
-DB_PASSWORD=Simform@123
-DB_NAME=testdb
-DB_PORT=3306
-
+# DB_HOST=localhost
+# DB_USER=vivek
+# DB_PASSWORD=Simform@123
+# DB_NAME=testdb
+# DB_PORT=3306
+hostname=databasevm.mysql.database.azure.com
+username=vivek
+password=Simform@123
+ssl-mode=require
 NODE_DOCKER_PORT=8080
 
 CLIENT_ORIGIN=http://127.0.0.1:8081
