for the pipeline

--- a/.env
+++ b/.env
@@ -1,12 +1,18 @@
 # DB_HOST=localhost
 # DB_USER=vivek
 # DB_PASSWORD=Simform@123
-# DB_NAME=testdb
-# DB_PORT=3306
-hostname=databasevm.mysql.database.azure.com
+
+
+hostname=mywebsitedata.mysql.database.azure.com
 username=vivek
 password=Simform@123
-ssl-mode=require
+DB_NAME=testdb
+DB_PORT=3306
+# hostname=vmwebsitebackend-servermysql.mysql.database.azure.com
+# username=mdwpsloveh
+# password=Simform@123
+# ssl-mode=require
+
 NODE_DOCKER_PORT=8080
 
 CLIENT_ORIGIN=http://127.0.0.1:8081
